[package]
name = "web-framework-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
simplelog = { version = "^0.12.2", features = ["paris"] }
dotenv = "0.15"

[dev-dependencies]
mockito = "0.31"