[package]
name = "web-framework-rust"
opt-level = 0
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11.6"
serde_json = "1.0"
simplelog = { version = "^0.12.2", features = ["paris"] }
dotenv = "0.15"
toml = "0.8.19"
chrono = "0.4"
serde = "1.0.217"
serde_derive = "1.0.217"
proc-macro2 = "1.0.93"
backtrace = "0.3"
meval = "0.2"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
web_framework_derive = { path = "web_framework_derive" } 
